--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>term to modify</h1>
     <p>now term to get idea about cmd push system</p>
+    <h2>Natural beauty of bangaldesh</h2>
+    <hr>
+    <img src="8.jpg" alt="nature">
+    <img src="Manikganj_Bangladesh.jpg" alt="manik nature">
+    <img src="natural beauty.jpg" alt="nature">    
 </body>
 </html>
